# fuzzy-octo-train

./: .gitignore  Dockerfile  LICENSE  README.md  VISION.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_workflow.py  data_pipeline.py  dsl_example.py  enterprise_pipeline.py  pipeline.yaml
src/flowmesh/: __init__.py
src/flowmesh/api/: __init__.py  app.py  auth.py  routes.py  schemas.py  websocket.py
src/flowmesh/auth/: __init__.py
src/flowmesh/core/: __init__.py  checkpoint.py  engine.py  events.py  hooks.py  models.py  scheduler.py
src/flowmesh/dashboard/: index.html
src/flowmesh/decorators/: __init__.py
src/flowmesh/dsl/: __init__.py
src/flowmesh/observability/: __init__.py  logging.py
src/flowmesh/patterns/: __init__.py  circuit_breaker.py  rate_limiter.py  retry.py
src/flowmesh/storage/: __init__.py  base.py  memory.py  postgres.py  redis.py  sqlite.py
tests/: conftest.py
tests/integration/: test_api.py  test_auth_and_delete.py
tests/unit/: test_checkpoint.py  test_circuit_breaker.py  test_conditional.py  test_data_flow.py  test_dry_run.py  test_engine.py  test_events.py  test_hooks.py  test_models.py  test_priority.py  test_rate_limiter.py  test_retry.py  test_scheduler.py  test_sqlite_store.py  test_websocket.py
